--- a/templates/perfil_estudantes.html
+++ b/templates/perfil_estudantes.html
@@ -12,8 +12,14 @@
 </style>
 
 {% if proposta %}
-  <h5 style="margin-bottom: 0px;">Perfil de Estudantes Esperados</h5>
-  <small class="obs">Cada linha representa uma vaga que idealmente deve ser preenchida por um estudante dos cursos marcados</small>
+  <h5 style="margin-bottom: 0px;">
+    <span lang="pt">Perfil de Estudantes Esperados</span>
+    <span lang="en" style="display:none;">Expected Student Profile</span>
+  </h5>
+  <small class="obs">
+    <span lang="pt">Cada linha representa uma vaga que idealmente deve ser preenchida por um estudante dos cursos marcados</span>
+    <span lang="en" style="display:none;">Each row represents a vacancy that should ideally be filled by a student from the marked programs</span>
+  </small>
   <table>
     <thead>
       <tr style="background-color: #EEF;">
@@ -30,7 +36,10 @@
     </thead>
     <tbody>
       <tr> {% comment %} NAO EH A FORMA MAIS ELEGANTE MAS FUNCIONA POR ENQUANTO {% endcomment %}
-        <td style="background-color: #EEF; text-align:center; writing-mode: vertical-lr;" rowspan="4">Estudantes</td>
+        <td style="background-color: #EEF; text-align:center; writing-mode: vertical-lr;" rowspan="4">
+          <span lang="pt">Estudantes</span>
+          <span lang="en" style="display:none;">Students</span>
+        </td>
         <td style="background-color: #EEF; text-align:center; padding: 0px 2px; font-size: 12px;">#1</td>
         {% for curso in cursos %}
           {% if curso.curso_do_insper %}
